# EIM-old

./: .babelrc  .eslintrc.json  .gitignore  .gitmodules  .npmrc  CMakeLists.txt  CMakeSettings.json  README.md  package-lock.json  package.json  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
src/: EIM.ts  global.ts  index.css  index.ejs  index.ts  renderer.ts
src/components/: index.ejs  index.ts
src/components/editor-grid/: index.ejs  index.ts
src/components/global-fab-button/: index.ejs  index.less  index.ts
src/components/header/: index.ejs  index.less
src/components/keyboard/: index.less  index.ts
src/components/pattern/: index.ejs  index.less  index.ts
src/components/window/: index.ejs  index.less  index.ts
src/styles/: avatar.less  buttons.less  custom.css  index.less  scroll-bar.css  shadows.less
src/utils/: drag.ts  index.ts  md-button-wave.ts
vsthost/: JuceHeader.h  main.cpp
